chg: tweak to max length of edit links

--- a/css/admin-toolbar-enhancer.css
+++ b/css/admin-toolbar-enhancer.css
@@ -61,3 +61,10 @@
 .gin-secondary-toolbar .gin-breadcrumb__list {
 	overflow: visible;
 }
+
+a.gin-breadcrumb__link {
+    max-width: 300px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: inline-block;
+}
