--- a/css/admin-toolbar-enhancer.css
+++ b/css/admin-toolbar-enhancer.css
@@ -8,12 +8,13 @@
 
 .gin-secondary-toolbar .gin-breadcrumb__link.gin-back-to-admin, .gin-secondary-toolbar .gin-breadcrumb__item .gin-breadcrumb__link.gin-back-to-admin:link, .gin-secondary-toolbar .gin-breadcrumb__item .gin-breadcrumb__link.gin-back-to-admin:visited {
 	color: var(--gin-color-primary);
-	padding: var(--gin-spacing-xs) var(--gin-spacing-m);
+	padding: 0 var(--gin-spacing-m);
 	border-radius: var(--gin-border-s);
 	border: 2px solid var(--gin-color-primary);
 	box-shadow: 0 1px 2px var(--gin-color-primary-light);
 	transition: var(--gin-transition);
 	font-size: 0.79rem;
+	line-height: 2rem;
 	font-weight: var(--gin-font-weight-semibold);
 	padding-left: calc(var(--gin-spacing-m) + 1.185rem);
 }
@@ -58,13 +59,9 @@
 	background-color: var(--gin-color-button-text);
 }
 
-.gin-secondary-toolbar .gin-breadcrumb__list {
-	overflow: visible;
-}
-
-a.gin-breadcrumb__link {
-    max-width: 300px;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    display: inline-block;
+.gin-secondary-toolbar .gin-breadcrumb__item .gin-breadcrumb__link {
+	max-width: 300px;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	display: inline-block;
 }
