--- a/css/admin-toolbar-enhancer.css
+++ b/css/admin-toolbar-enhancer.css
@@ -1,67 +1,41 @@
-/*
- * Contains styles for the Gin admin toolbars.
- */
-
-.gin-secondary-toolbar.gin-secondary-toolbar--frontend {
-	background: var(--gin-bg-app);
+/* Preview View Mode Menu */
+div.node-preview-container.container-inline {
+    display: block;
+    position: inherit;
+}
+/* Back to Editing Button */
+.node-preview-backlink{
+	margin-left: 10px;
 }
 
-.gin-secondary-toolbar .gin-breadcrumb__link.gin-back-to-admin, .gin-secondary-toolbar .gin-breadcrumb__item .gin-breadcrumb__link.gin-back-to-admin:link, .gin-secondary-toolbar .gin-breadcrumb__item .gin-breadcrumb__link.gin-back-to-admin:visited {
-	color: var(--gin-color-primary);
-	padding: 0 var(--gin-spacing-m);
-	border-radius: var(--gin-border-s);
-	border: 2px solid var(--gin-color-primary);
-	box-shadow: 0 1px 2px var(--gin-color-primary-light);
-	transition: var(--gin-transition);
-	font-size: 0.79rem;
-	line-height: 2rem;
-	font-weight: var(--gin-font-weight-semibold);
-	padding-left: calc(var(--gin-spacing-m) + 1.185rem);
+.node-preview-backlink::before {
+    content: '\f053  ' !important;
+    font-weight: 900 !important;
+    font-family: "Font Awesome 6 Free - Solid" ;
+    color: #0277bd;
 }
 
-.gin-secondary-toolbar .gin-breadcrumb__item .gin-breadcrumb__link.gin-back-to-admin:hover, .gin-secondary-toolbar .gin-breadcrumb__item .gin-breadcrumb__link.gin-back-to-admin:active, .gin-secondary-toolbar .gin-breadcrumb__item .gin-breadcrumb__link.gin-back-to-admin:focus {
-	color: var(--gin-color-button-text);
-	background-color: var(--gin-color-primary-hover);
-	border-color: var(--gin-color-primary-hover);
+.node-preview-backlink:hover::before {
+	color: #b71c1c !important;
 }
 
-.gin-secondary-toolbar .gin-breadcrumb__item .gin-breadcrumb__link.gin-back-to-admin:active {
-	background-color: var(--gin-color-primary-active);
+/* Dropdown */
+#edit-view-mode{
+	min-width: 150px;
 }
 
-.gin-secondary-toolbar .gin-breadcrumb__item .gin-breadcrumb__link.gin-back-to-admin:focus {
-	background-color: var(--gin-color-primary-active);
-	border-color: var(--gin-color-focus-border);
-}
+/* Mobile */
+@media (max-width: 575px) {
+	.node-preview-form-select{
+		display: flex;
+		flex-direction: column;
+	}
+	
+	.node-preview-form-select > * {
+		padding: 10px 0px;
+	}
 
-.gin-secondary-toolbar .gin-breadcrumb__item .gin-breadcrumb__link.gin-back-to-admin .placeholder, .gin-secondary-toolbar .gin-breadcrumb__item .gin-breadcrumb__link.gin-back-to-admin:link .placeholder, .gin-secondary-toolbar .gin-breadcrumb__item .gin-breadcrumb__link.gin-back-to-admin:visited .placeholder {
-	color: var(--gin-color-primary);
-	font-weight: var(--gin-font-weight-semibold);
-	transition: var(--gin-transition);
-	cursor: pointer;
-}
-
-.gin-secondary-toolbar .gin-breadcrumb__item .gin-breadcrumb__link.gin-back-to-admin:hover .placeholder, .gin-secondary-toolbar .gin-breadcrumb__item .gin-breadcrumb__link.gin-back-to-admin:active .placeholder, .gin-secondary-toolbar .gin-breadcrumb__item .gin-breadcrumb__link.gin-back-to-admin:focus .placeholder {
-	color: var(--gin-color-button-text);
-}
-
-.gin-secondary-toolbar .gin-breadcrumb__item .gin-breadcrumb__link.gin-back-to-admin::before {
-	background-color: var(--gin-color-primary);
-	mask-image: url('../../../../themes/contrib/gin/dist/media/sprite.svg#media-edit-view');
-	-webkit-mask-image: url('../../../../themes/contrib/gin/dist/media/sprite.svg#media-edit-view');
-	width: 0.79rem;
-	height: 0.79rem;
-	margin-left: var(--gin-spacing-m);
-	transition: var(--gin-transition);
-}
-
-.gin-secondary-toolbar .gin-breadcrumb__item .gin-breadcrumb__link.gin-back-to-admin:hover::before, .gin-secondary-toolbar .gin-breadcrumb__item .gin-breadcrumb__link.gin-back-to-admin:active::before, .gin-secondary-toolbar .gin-breadcrumb__item .gin-breadcrumb__link.gin-back-to-admin:focus::before {
-	background-color: var(--gin-color-button-text);
-}
-
-.gin-secondary-toolbar .gin-breadcrumb__item .gin-breadcrumb__link {
-	max-width: 300px;
-	overflow: hidden;
-	text-overflow: ellipsis;
-	display: inline-block;
-}
+	.node-preview-backlink{
+		align-self: center;
+	}
+  }
